# SitsSCD

./: .gitignore  main.py  pyproject.toml  run.sh  train.py  vis.ipynb
configs/dataset/: dynamicearthnet.yaml
logs/: test_logs.txt
models/: module.py
utils/: lr_scheduler.py
