[project]
name = "sitsscd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "numpy<2.0",
    "pandas>=2.3.2",
    "pytorch-lightning>=2.3.3",
    "torch==2.0.1",
    "torchaudio",
    "torchvision==0.15.2",
    "wandb>=0.21.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
